# telaten-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mcp.json  pyproject.toml  run.py
app/: main.py  mcp_server.py  worker.py
app/core/: config.py  llm.py  logging.py  mcp_client.py  redis.py  security.py  utils.py
app/db/: init_data.py  seed.py  session.py
app/db/seeds/: auth_seed.py  business_seed.py  finance_seed.py  gamification_seed.py  milestone_seed.py
app/modules/agent/: service.py  tools.py  workflow.py
app/modules/auth/: dependencies.py  models.py  repository.py  routes.py  service.py
app/modules/business/: admin_routes.py  dependencies.py  models.py  repository.py  routes.py  service.py
app/modules/chat/: models.py  repository.py  routes.py  service.py
app/modules/finance/: models.py  repository.py  routes.py  service.py
app/modules/gamification/: admin_routes.py  dependencies.py  models.py  repository.py  routes.py  service.py
app/modules/milestone/: models.py  repository.py  routes.py  service.py
docs/: AGENT_MAIN.md  AUTH_BUSINESS.md  ERD.md  FINANCE_MILESTONE.md  GAMIFICATION_CHAT.md  INFRASTRUCTURE.md  agent_main.md  auth_business.md  finance_milestone.md  gamification_chat.md  infrastructure.md
tests/: test_pagination.py
